# tech_notes_public

./: README.md
algorithms/simple_json_parser/: .gitignore  CMakeLists.txt  README.md
algorithms/simple_json_parser/src/: helpers.cpp  helpers.h  json.cpp  json.h  main.cpp  tests.cpp
algorithms/simple_json_parser/test_data/: 1.json
databases/postgresql/: README.md
databases/postgresql/advisory_locks/: README.md  main.py  utils.py
frameworks/python/django/: .gitignore  README.md
frameworks/python/django/01_hello_world/: README.md
frameworks/python/django/02_base/: README.md
frameworks/python/django/03_orm/: README.md
frameworks/python/django/05_views/: README.md
frameworks/python/django/06_users/: README.md  some_details.txt
frameworks/python/django/07_rest_views/: README.md  manage.py
frameworks/python/django/08_rest_crud/: README.md
frameworks/python/django/09_rest_list_search/: README.md  manage.py
frameworks/python/django/10_rest_users/: README.md  manage.py  token_storage_details.txt
frameworks/python/django/11_testing/: README.md
frameworks/python/django/12_testblog/: README.md  requirements.txt
frameworks/python/django/djangowallet/: README.md  manage.py  requirements.txt
frameworks/python/django/forms/: README.md
frameworks/python/django/hello_world/: README.md  manage.py
frameworks/python/django/orm/: README.md
frameworks/python/django/users/: README.md
frameworks/python/flask/: README.md  base_concepts.py  hello_world.py
frameworks/python/flask/static/: styles.css
languages/C++/: README.md
languages/C++/io/: README.md
languages/C++/network/: .gitignore  CMakeLists.txt  README.md  launch.sh
languages/C++/network/src/: common.cpp  common.h  main.cpp
languages/C++/network/src/client_server/: README.md  sockets.h  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
languages/C++/network/src/example_select/: README.md  example_select.cpp
languages/java/: README.md  base.md  default_cases.md  exceptions.md  gradle.md  infrasructure.md  maven.md  multithreading.md  spring.md  templates.md
languages/javascript/: README.md  debugger.html  hello_world.html
languages/python/: README.md  hello_world.py
languages/python/asyncio/: README.md  base.py  meta.py  with_futures.py
languages/python/cython/: Makefile  README.md  examples.cpp  examples.h  pyexamples.pyx  setup.py
libraries/javascript/reactjs/: README.md
libraries/python/celery/: README.md  kill_workers.sh  main.py  run_workers.sh  tasks.py
libraries/python/sqlalchemy/: .gitignore  01_hello_world.py  03_relations1toN.py  04_relationsNtoN.py  05_queries.py  06_reflect.py  README.md  declarative.py  hello_world.py
misc/: README.md
misc/cpp_http_client/: CMakeLists.txt  README.md
misc/cpp_http_client/src/: common.cpp  common.h  http_client.cpp  http_client.h  main.cpp  socket.cpp  socket.h  url_parse.cpp  url_parse.h
misc/cpp_http_client/tests/: test_common.cpp  test_http_client.cpp  test_url_parse.cpp
principles/security/csp/: README.md  server.py
tools/webpack/: README.md
tools/webpack/details/: README.md  webpack.config.js
tools/webpack/hello_world/: README.md  entry.js  index.html  install.sh  launch_server.sh  launch_webpack.sh  lib.js  webpack.config.js
traffic_regulations_russia/: README.md  accident.md  bugs.md  car_types.md  cargo.md  cross.md  crossroads.md  driving.md  exceptions.md  internals.md  lanes.md  law.md  law_other.md  license_types.md  lights.md  logic.md  marking.md  medical.md  medical_help.md  moped.md  people.md  presets.md  punishments.md  railway.md  reverse.md  road_parts.md  road_types.md  signs.md  signs_main.md  signs_spec.md  signs_types.md  sound.md  stop.md  technics.md  terms.md  towing.md  traffic_police.md  turns.md
(+160 files in other folders)
